test/sema/ambiguous-constructor-call-with-overloaded-params.delta
// RUN: %not %delta -typecheck %s | %FileCheck %s

struct Foo: Copyable {
    Foo(a: int) { }
    Foo(b: int) { }
}

void main() {
    // CHECK: [[@LINE+6]]:9: error: ambiguous reference to 'Foo' constructor
    // CHECK: 4:5: note: candidate function:
    // CHECK-NEXT: Foo(a: int) { }
    // CHECK: 5:5: note: candidate function:
    // CHECK-NEXT: Foo(b: int) { }
    // CHECK-NOT: note
    _ = Foo(1)
}
